<resources>
    <string name="app_name">همدان ملک</string>
    <string name="title_home">خانه</string>
    <string name="title_dashboard">ثبت ملک جدید</string>
    <string name="new_land_sale">خرید و فروش</string>
    <string name="category_sale">خرید و فروش</string>
    <string name="category_company">خدمات ساختمانی</string>
    <string name="new_land_rent">رهن و اجاره</string>
    <string name="new_land_participation">مشارکت در ساخت</string>
    <string name="new_land_pre_sale">پیش فروش</string>
    <string name="new_land_company">ثبت شرکت</string>
    <string name="new_land_lawyer">وکلای حقوقی</string>
    <string name="title_aboutus">صفحه شخصی</string>
    <string name="title_personalpage">صفحه شخصی</string>
    <string name="title_createnewad">ثبت آگهی</string>
    <string name="title_about_us">در باره ما</string>
    <string name="title_register_company">ثبت شرکت</string>
    <string name="title_network_error">خطای اینترنت</string>
    <string name="title_user_lands">املاک من</string>
    <string name="title_user_favorite">علاقه مندی ها</string>
    <string name="title_companies">شرکت ها</string>
    <string name="title_register_agency_user">ثبت نام مشاور املاک</string>
    <string name="title_chat">چت</string>
    <string name="all_featured">تمام آگهی های ویژه</string>
    <string name="title_office_lawyers">وکلای حقوقی</string>
    <string name="my_hamedan_melk_register_company_summary">ثبت شرکت و معرفی خدمات</string>
    <string name="my_hamedan_melk_register_company">ثبت شرکت</string>
    <string name="my_hamedan_melk_bookmarks_title">علاقه مندی ها</string>
    <string name="my_hamedan_melk_recent_posts_title">املاک من</string>
    <string name="my_hamedan_melk_history_posts_title">بازدیدهای اخیر</string>
    <string name="my_hamedan_melk_aboutus_title">درباره ما</string>
    <string name="my_hamedanmelk_help">راهنما</string>
    <string name="my_hamedanmelk_faq_title">پشتیبانی و قوانین</string>
    <string name="my_hamedan_melk_appinfo_title">اطلاعات نرم افزار</string>
    <string name="my_hamedan_melk_notification_setting_summary">لرزش، اعلان ها</string>
    <string name="my_hamedan_melk_bookmarks_summary">لیست املاک مورد علاقه </string>
    <string name="my_hamedan_melk_recent_posts_summary">لیست آگهی های املاک من</string>
    <string name="my_hamedan_melk_history_posts_summary">لیست آگهی هایی که اخیرا مشاهده نمونه اید.</string>
    <string name="my_hamedan_clear_history">حذف بازدیدهای اخیر</string>
    <string name="my_hamedan_melk_aboutus_summary">درباره همدان ملک، قوانین و پشتیبانی، اطلاعات اپلیکیشن</string>
    <string name="my_hamedan_melk_app_info_version">ورژن</string>
    <string name="no_internet_error_title"> اینترنت وصل نیست</string>
    <string name="no_internet_error_description">لطفا اتصال اینترنت را چک کرده و دوباره امتحان کنید</string>
    <string name="no_internet_error_retry">امتحان دوباره</string>
    <string name="app_bar_search_title">جست و جو در همه آگهی ها</string>
    <string name="search_filter_clear">حذف فیلتر</string>
    <string name="app_bar_cities_list">همدان</string>
    <string name="search_min_length_error">لطفا حداقل چهار حرف وارد کنید</string>
    <string name="search_filter_no_item">آگهی با مشخصات مورد نظر یافت نشد</string>
    <string name="pro_filter_submit">اعمال</string>
    <string name="pro_search_title">جستوجو پیشرفته</string>
    <string name="alert_dialog_ok">تایید</string>
    <string name="alert_dialog_cancel">انصراف</string>
    <string name="alert_dialog_logout_message">خروج از حساب کاربری</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="splash_ads_skip_button">رد کردن</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash">FullscreenActivity</string>
    <string name="user_login">ورود</string>
    <string name="user_login_fragment_not_registered">کاربر جدید هستید؟ </string>
    <string name="user_register">ثبت نام کاربر</string>
    <string name="agency_register">ثبت نام مشاور املاک</string>
    <string name="user_username">نام کاربری</string>
    <string name="user_password">کلمه عبور</string>
    <string name="user_register_name">نام</string>
    <string name="user_register_family">نام خانوادگی</string>
    <string name="user_register_phone">تلفن همراه</string>
    <string name="user_register_sex">جنسیت</string>
    <string name="user_register_male">آقا</string>
    <string name="user_register_female">خانم</string>
    <string name="personal_page_exit">خروج</string>
    <string name="personal_page_login_desc">برای مشاهده پروفایل وارد شود</string>
    <string name="sale_category">خرید و فروش</string>
    <string name="rent_category">رهن و اجاره</string>
    <string name="assingment_category">مشارکت در ساخت</string>
    <string name="presale_category">پیش فروش</string>
    <string name="agent_category">مشاورین املاک</string>
    <string name="services_category">سرویس و خدمات</string>
    <string name="law_instiute_category">وکلای حقوقی</string>
    <string name="inquiry_category">سرویس و خدمات</string>
    <string name="more_category">سرویس و خدمات</string>
    <string name="exchange_category">قابل معاوضه</string>
    <string name="news_category">اخبار</string>
    <string name="construction_building">خدمات ساختمانی > ساخت و ساز</string>
    <string name="construction_decoration">خدمات ساختمانی > تزئینات</string>
    <string name="construction_services">خدمات ساختمانی > خدماتی</string>
    <string name="construction_installation">خدمات ساختمانی > تاسیساتی</string>
    <string name="loading_message">دریافت اطلاعات…</string>
    <string name="username_input_error_msg">لطفا نام کاربری را وارد نمایید</string>
    <string name="password_input_error_msg">لطفا گذرواژه خود را وارد نمایید</string>
    <string name="title_input_error_msg">لطفا عنوان را وارد کنید</string>
    <string name="required_field_msg">تکمیل این فیلد لازم است</string>
    <string name="required_spinner_select">انتخاب فیلد الزامی است</string>
    <string name="dong_input_error_msg">لطفا دانگ را وارد کنید</string>
    <string name="price_input_error_msg">لطفا قیمت را وارد کنید</string>
    <string name="pre_pay_input_error_msg">لطفا پیش پرداخت را وارد کنید</string>
    <string name="loan_price_input_error_msg">لطفا مبلغ وام را وارد کنید</string>
    <string name="mortgage_input_error_msg">لطفا قیمت رهن را وارد کنید</string>
    <string name="rent_price_input_error_msg">لطفا مبلغ اجاره را وارد کنید</string>
    <string name="date_input_error_msg">لطفا تاریخ را انتخاب کنید</string>
    <string name="foundation_space_input_error_msg">لطفا متراژ را وارد کنید</string>
    <string name="building_year_input_error_msg">لطفا سال ساخت را وارد کنید</string>
    <string name="description_input_error_msg">لطفا توضیحات را وارد کنید</string>
    <string name="date_hint">انتخاب تاریخ</string>
    <string name="spinner_error_msg">انتخاب این فیلد الزامی است</string>
    <string name="address_input_error_msg">لطفا آدرس را وارد کنید</string>
    <string name="manager_input_error_msg">لطفا نام مدیر را وارد کنید</string>
    <string name="select_map">انتخاب محدوده</string>
    <string name="select_here">انتخاب این نقطه</string>
    <string name="success_office_msg">اطلاعات دفتر اسناد رسمی ثبت شد و در انتظار تایید است</string>
    <string name="success_company_msg">اطلاعات شرکت ثبت شد و در انتظار تایید است</string>
    <string name="success_lawyer_msg">اطلاعات وکیل ثبت شد و در انتظار تایید است</string>
    <string name="success_new_land">اطلاعات آگهی ثبت شد و در انتظار تایید قرار گرفت</string>
    <string name="fail_msg">هنگام ارسال خطایی رخ داد</string>
    <string name="search_filter_city">انتخاب شهر</string>
    <string name="search_filter_district">انتخاب محله</string>
    <string name="search_filter_land_state">انتخاب نوع درخواست</string>
    <string name="search_filter_submit">جستو جو</string>
    <string name="search_filter_filter"></string>
    <string name="firstname_input_error_msg">لطفا نام را وارد نمایید</string>
    <string name="lastname_input_error_msg">لطفا نام خانوادگی را وارد نمایید</string>
    <string name="gendertype_input_error_msg">لطفا جنسیت را انتخاب نمایید</string>
    <string name="phone_input_error_msg">لطفا شماره همراه را وارد نمایید</string>
    <string name="photo_input_error_msg">لطفا عکس را انتخاب کنید</string>
    <string name="duplicate_username_error_msg">کاربری تلفن همراه مورد نظر، در سیستم قبلا ایجاد شده است</string>
    <string name="register_public_user_sucess_msg">نام کاربری و رمز عبور ارسال شد</string>
    <string name="land_info_land_type">نوع ملک</string>
    <string name="land_info_land_age">سن بنا</string>
    <string name="land_info_room_count">تعداد اتاق</string>
    <string name="land_info_floor_count">تعداد طبقات</string>
    <string name="land_info_units_in_floor">تعداد واحد در طبقه</string>
    <string name="land_info_foundation_space">متراژ</string>
    <string name="land_info_floor">طبقه</string>
    <string name="land_info_space_price">قیمت هر متر</string>
    <string name="land_info_total_price">قیمت کل</string>
    <string name="land_info_description">توضیحات تکمیلی</string>
    <string name="land_info_pre_pay">پیش پرداخت</string>
    <string name="land_info_mortgage">قیمت رهن</string>
    <string name="land_info_rent_total_price">اجاره</string>
    <string name="land_info_resident_owner">مالک ساکن است؟</string>
    <string name="land_info_delivery_date">تاریخ تحویل</string>
    <string name="land_info_voucher_date">تاریخ تنظیم سند</string>
    <string name="land_info_address">آدرس</string>
    <string name="land_info_province">استان</string>
    <string name="land_info_city">شهر</string>
    <string name="land_info_area">منطقه</string>
    <string name="land_info_created_at">تاریخ ثبت</string>
    <string name="land_info_price_unit">تومان</string>
    <string name="land_info_meter">متر</string>
    <string name="land_info_name">نام</string>
    <string name="land_info_phone">تلفن</string>
    <string name="land_info_fax">فکس</string>
    <string name="land_info_user_more_info">اطلاعات بیشتر</string>
    <string name="land_info_start_chat">شروع چت</string>
    <string name="company_type_building">ساختمانی</string>
    <string name="company_type_structural">تاسیساتی</string>
    <string name="company_type_decoration">دکوراسیون</string>
    <string name="company_type_services">خدماتی</string>
    <string name="company_parent">گروه</string>
    <string name="company_children">زیرگروه</string>
    <string name="authentication_username">Username</string>
    <string name="authentication_password">Password</string>
    <string name="user_shared_preference">user_model_pref</string>
    <string name="new_land_pref">new_land_shared_prefrence</string>
    <string name="pro_filter_pref">pro_filter_pref</string>
    <string name="vocabulary_title">عنوان</string>
    <string name="vocabulary_district">محله</string>
    <string name="vocabulary_total_price">قیمت</string>
    <string name="vocabulary_occasion">اکازیون</string>
    <string name="vocabulary_featured">ویژه</string>
    <string name="vocabulary_luxury">لاکچری</string>
    <string name="vocabulary_mortgage_price">رهن</string>
    <string name="vocabulary_submit_office">دفتر اسناد رسمی</string>
    <string name="vocabulary_lawyer_name">نام وکیل</string>
    <string name="new_land_add_photo">افزودن عکس</string>
</resources>