<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <Preference
            android:summary="@string/my_hamedan_melk_notification_setting_vibrate"
            android:title="@string/my_hamedan_melk_notification_setting_title"
            app:key="myhamedanmelk_notification"></Preference>

        <Preference
            android:title="@string/my_hamedan_melk_bookmarks_title"
            android:summary="@string/my_hamedan_melk_bookmarks_summary"
            android:icon="@drawable/ic_bookmarks_red_24"
            android:key="aboutus_bookmarks"
            >
        </Preference>
        <Preference
            android:title="@string/my_hamedan_melk_recent_posts_title"
            android:summary="@string/my_hamedan_melk_recent_posts_summary"
            android:icon="@drawable/ic_history_red_24"
            android:key="aboutus_recent_posts"
            >
        </Preference>

        <Preference
            android:title="@string/my_hamedanmelk_help"
            android:summary="@string/my_hamedan_melk_aboutus_summary"
            android:key="myhamedanmelk_aboutus_items"
            android:icon="@drawable/ic_help_outline_red_24"
            app:allowDividerAbove="true"

            >
        </Preference>

</PreferenceScreen>
