<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="ir.hamedanmelk.hamedanmelk.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="ir.hamedanmelk.hamedanmelk.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_aboutus"
        android:name="ir.hamedanmelk.hamedanmelk.ui.personalpage.MyHamedanMelkFragment"
        android:label="@string/title_aboutus"
         />
    <fragment
        android:id="@+id/notificationSettingsFragment"
        android:name="ir.hamedanmelk.hamedanmelk.ui.personalpage.NotificationSettingsFragment"
        android:label="@string/my_hamedan_melk_notification_setting_title" />
    <fragment
        android:id="@+id/FAQFragment"
        android:name="ir.hamedanmelk.hamedanmelk.ui.personalpage.help.FAQFragment"
        android:label="@string/my_hamedanmelk_faq_title"
        tools:layout="@layout/fragment_f_a_q" />
    <fragment
        android:id="@+id/aboutUsFragment"
        android:name="ir.hamedanmelk.hamedanmelk.ui.personalpage.help.AboutUsFragment"
        android:label="@string/my_hamedan_melk_aboutus_title"
        tools:layout="@layout/fragment_about_us" />
    <fragment
        android:id="@+id/appInfoFragment"
        android:name="ir.hamedanmelk.hamedanmelk.ui.personalpage.help.AppInfoFullscreenFragment"
        android:label="@string/my_hamedan_melk_appinfo_title"
        tools:layout="@layout/fragment_app_info_fullscreen" />
    <fragment
        android:id="@+id/HelpFragment"
        android:name="ir.hamedanmelk.hamedanmelk.ui.personalpage.help.HelpFragment"
        android:label="@string/my_hamedanmelk_help" />
    <fragment
        android:id="@+id/appInfoFullscreenFragment"
        android:name="ir.hamedanmelk.hamedanmelk.ui.personalpage.help.AppInfoFullscreenFragment"
        android:label="fragment_app_info_fullscreen"
        tools:layout="@layout/fragment_app_info_fullscreen" >
        <argument
            android:name="hidenavigation"
            app:argType="boolean"
            android:defaultValue="true"
            app:nullable="false"/>
    </fragment>
    <fragment
        android:id="@+id/noInternetErrorFragment"
        android:name="ir.hamedanmelk.hamedanmelk.ui.NoInternetErrorFragment"
        android:label="fragment_no_internet_error"
        tools:layout="@layout/fragment_no_internet_error" />
    <fragment
        android:id="@+id/personalPage"
        android:name="ir.hamedanmelk.hamedanmelk.ui.personalpage.PersonalPage"
        android:label="@string/title_personalpage"
        tools:layout="@layout/fragment_personal_page" />
    <fragment
        android:id="@+id/userLogin"
        android:name="ir.hamedanmelk.hamedanmelk.ui.user.UserLogin"
        android:label="@string/user_login"
        tools:layout="@layout/fragment_user_login" />
    <fragment
        android:id="@+id/userRegister"
        android:name="ir.hamedanmelk.hamedanmelk.ui.user.UserRegister"
        android:label="@string/user_register"
        tools:layout="@layout/fragment_user_register" />

</navigation>