<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.PublicUserRegister">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/user_register"
            android:textAlignment="center"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/PublicUserRegistereFirstNametxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/user_register_name" />

        <EditText
            android:id="@+id/PublicUserRegistereLastNametxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/user_register_family" />

        <EditText
            android:id="@+id/PublicUserRegisterePhonetxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:text="@string/user_register_phone" />

        <RadioGroup
            android:id="@+id/PublicUserRegisterGenderTypeRadioGrp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl">

            <RadioButton
                android:id="@+id/PublicUserRegisterGenderTypeMaleRadioBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_register_male"
                android:textDirection="rtl" />

            <RadioButton
                android:id="@+id/PublicUserRegisterGenderTypeFemaleRadioBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_register_female"
                android:textDirection="rtl" />
        </RadioGroup>

        <Button
            android:id="@+id/PublicUserRegisterRegisterationBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/user_register"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</FrameLayout>