<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/NewLandFragmentSaleBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="16dp"
                android:text="@string/new_land_sale"
                android:textAlignment="center"
                android:theme="@style/Widget.MaterialComponents.Button.OutlinedButton" />

            <Button
                android:id="@+id/NewLandFragmentPreSaleBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="16dp"
                android:text="@string/new_land_pre_sale"
                android:textAlignment="center"
                android:theme="@style/Widget.MaterialComponents.Button.OutlinedButton" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/NewLandFragmentRentBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="16dp"
                android:text="@string/new_land_rent"
                android:textAlignment="center"
                android:theme="@style/Widget.MaterialComponents.Button.OutlinedButton" />

            <Button
                android:id="@+id/NewLandFragmentParticipationBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="16dp"
                android:text="@string/new_land_participation"
                android:textAlignment="center"
                android:theme="@style/Widget.MaterialComponents.Button.OutlinedButton" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/newLandFragmentLawyerBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/new_land_lawyer"
                android:theme="@style/Widget.MaterialComponents.Button.OutlinedButton" />

            <Button
                android:id="@+id/newLandFragmentCompanyBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="16dp"
                android:text="@string/new_land_company"
                android:textAlignment="center"
                android:theme="@style/Widget.MaterialComponents.Button.OutlinedButton" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/newLandFragmentOfficeBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/vocabulary_submit_office"
                android:theme="@style/Widget.MaterialComponents.Button.OutlinedButton" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>

