<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="60dp"
    android:layoutDirection="rtl"
    tools:context=".ui.lawyer.NewLawyerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/vocabulary_lawyer_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/NewLawyerFragmentFullNameEtxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/NewLawyerFragmentDescriptionEtxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/land_info_description" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/NewLawyerFragmentPhoneEtxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/land_info_phone" />
        </com.google.android.material.textfield.TextInputLayout>




        <Button
            android:id="@+id/NewLawyerFragmentAddPhotoBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:drawableTop="@drawable/ic_baseline_add_photo_alternate_48"
            android:padding="8dp"
            android:text="@string/new_land_add_photo"
            android:theme="@style/Widget.MaterialComponents.Button.OutlinedButton" />

        <LinearLayout
            android:id="@+id/NewLawyerFragmentImageLyt"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/NewLawyerFragmentLogoImg"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/no_image" />

            <ImageView
                android:id="@+id/NewLawyerFragmentClearImg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_baseline_clear_24" />

        </LinearLayout>


        <Button
            android:id="@+id/NewLawyerFragmentSubmitBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/new_land_lawyer"
            android:theme="@style/Widget.MaterialComponents.Button.OutlinedButton" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>